[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1025.0
margin_bottom = 604.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Control"]
margin_right = 1022.0
margin_bottom = 600.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wheel" type="Button" parent="Control/GridContainer"]
margin_right = 338.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Wheel of fortune "

[node name="Chuck a luck" type="Button" parent="Control/GridContainer"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Chuck a luck"

[node name="Lottery" type="Button" parent="Control/GridContainer"]
margin_left = 684.0
margin_right = 1022.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Lottery"

[node name="Dropper" type="Button" parent="Control/GridContainer"]
margin_top = 302.0
margin_right = 338.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dropper"

[node name="Blackjack" type="Button" parent="Control/GridContainer"]
margin_left = 342.0
margin_top = 302.0
margin_right = 680.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Blackjack"

[node name="Slot Machine" type="Button" parent="Control/GridContainer"]
margin_left = 684.0
margin_top = 302.0
margin_right = 1022.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Slot Machine"

[connection signal="pressed" from="Control/GridContainer/Wheel" to="." method="_on_Wheel_pressed"]
[connection signal="pressed" from="Control/GridContainer/Chuck a luck" to="." method="_on_Chuck_a_luck_pressed"]
[connection signal="pressed" from="Control/GridContainer/Lottery" to="." method="_on_Lottery_pressed"]
[connection signal="pressed" from="Control/GridContainer/Dropper" to="." method="_on_Dropper_pressed"]
[connection signal="pressed" from="Control/GridContainer/Blackjack" to="." method="_on_Blackjack_pressed"]
[connection signal="pressed" from="Control/GridContainer/Slot Machine" to="." method="_on_Slot_Machine_pressed"]
